# nomacs-imageformats

./: CMakeLists.txt
dds/: CMakeLists.txt
libqpcx/: CMakeLists.txt  qpcxplugin.cpp
libqpsd/: CMakeLists.txt
libqqoi/: CMakeLists.txt
webp/: CMakeLists.txt  versioninfo.rc
